--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,88 @@ html, body, #main {
     margin: 0px;
 }
 
-#map {
+#map_border {
     height: 100%;
     width: 100%;
-    /*position: absolute;*/
-    /*top: 100px;*/
-    /*left: 50px;*/
-    /*height: calc(100% - 200px);*/
-    /*width: calc(100% - 100px);*/
+    position: absolute;
+    background-color: white;
+    overflow-x: hidden;
+    padding-top: 60px;
+    z-index: 4;
+}
+#map {
+    position: absolute;
+    top: 80px;
+    left: 30px;
+    right: 30px;
+    height: 85%;
+    width: 85%;
 
-    /*-webkit-box-sizing: border-box;*/
-    /*-moz-box-sizing: border-box;*/
-    /*box-sizing: border-box;*/
-    /*z-index: 1;*/
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    z-index: 1;
+    border-radius: 20px;
+}
+
+
+
+
+
+/*form styles*/
+
+#openbtn {
+    position: absolute;
+    top: 5px;
+    left: 25px;
+    font-size:50px;
+    margin-right: 50px;
+    color: #818181;
+}
+#main a:hover{
+    color: #f1f1f1;
+}
+
+#closebtn {
+    position: absolute;
+    top: 5px;
+    right: 25px;
+    font-size: 50px;
+    margin-left: 50px;
+    color: #818181;
+}
+
+#panel_border {
+    height: 100%;
+    width: 100%;  /*set to zero*/
+    position: absolute;
+    background-color: white;
+    overflow-x: hidden;
+    transition: 0.2s;
+    padding-top: 60px;
+    z-index: 5;
+}
+#panel {
+    position: absolute;
+    top: 80px;
+    left: 30px;
+    right: 30px;
+    height: 85%;
+    width: 85%;
+
+    background-color: #64aa8c;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    z-index: 1;
+    -webkit-border-radius:;
+    -moz-border-radius:;
+    border-radius: 20px;
+}
+
+#map_title, #panel_title {
+    position: relative;
+    top: -30px;
+    font-size: 25px;
+    text-align: center;
 }
