--- a/css/style.css
+++ b/css/style.css
@@ -26,39 +26,117 @@ html, body, #main {
     z-index: 1;
     border-radius: 20px;
 }
+#map_border p, #panel_border p{
+    color: #282828;
+    font-size: 30px;
+}
 
 
 
 
 
 /*form styles*/
+input[type=checkbox] {
+    position: relative;
+    left: 12px;
+    top: 2px;
+}
+form label {
+    position: relative;
+    left: 16px;
+}
+#form p {
+    font-size: 25px;
+    line-height: 20px;
+    position: relative;
+    left: 5px;
+    top: 5px;
+}
 
+@media screen and (max-width: 400px) {
+    #map_button p {
+        display: none;
+    }
+    #map_button a{
+        position: absolute;
+        top: 10px;
+        left: 1%;
+        font-size:50px;
+        color: #282828;
+        text-decoration: none;
+    }
+
+    #panel_button p {
+        display: none;
+    }
+    #panel_button a {
+        position: absolute;
+        top: 10px;
+        right: 1%;
+        font-size: 50px;
+        color: #282828;
+        text-decoration: none;
+    }
+}
+
+#map_button p {
+    position: absolute;
+    top: 30px;
+    left: 7px;
+    font-size:17px;
+    margin-right: 50px;
+    color: #282828;
+    word-wrap: break-word;
+    width: 70px;
+    line-height: 20px;
+    text-align: center;
+}
 #openbtn {
     position: absolute;
-    top: 5px;
-    left: 25px;
+    top: 10px;
+    left: 80px;
     font-size:50px;
     margin-right: 50px;
-    color: #818181;
+    color: #282828;
+    text-decoration: none;
 }
-#main a:hover{
-    color: #f1f1f1;
+#panel_button a:hover,
+#map_button a:hover,
+#panel_button p:hover,
+#map_button p:hover
+{
+    color: #818181;
+    text-decoration: none;
+    cursor: pointer;
 }
 
+#panel_button p {
+    position: absolute;
+    top: 30px;
+    right: 7px;
+    font-size: 17px;
+    margin-left: 50px;
+    color: #282828;
+    word-wrap: break-word;
+    width: 70px;
+    line-height: 20px;
+    text-align: center;
+}
 #closebtn {
     position: absolute;
-    top: 5px;
-    right: 25px;
+    top: 10px;
+    right: 80px;
     font-size: 50px;
     margin-left: 50px;
-    color: #818181;
+    color: #282828;
+    text-decoration: none;
 }
 
 #panel_border {
     height: 100%;
-    width: 100%;  /*set to zero*/
+    width: 90%;  /*set to zero*/
     position: absolute;
-    background-color: white;
+    background-color: #586843;
     overflow-x: hidden;
     transition: 0.1s;
     padding-top: 60px;
@@ -71,7 +149,7 @@ html, body, #main {
     height: 90%;
     width: 90%;
 
-    background-color: #64aa8c;
+    background-color: #9eae88;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -87,5 +165,6 @@ html, body, #main {
 }
 
 #form {
-
+    background-color: #cad6b9;
+    width: 90%;
 }
