--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
     #map_button p {
         display: none;
     }
@@ -21,5 +21,16 @@
         font-size: 50px;
         color: #282828;
         text-decoration: none;
+    }
+
+    #panel_border {
+        height: 100%;
+        width: 90%;  /*set to zero*/
+        position: absolute;
+        background-color: #586843;
+        overflow-x: hidden;
+        transition: 0.1s;
+        padding-top: 60px;
+        z-index: 5;
     }
 }
