park_viewer - shrank screen on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ form label {
 
 #panel_border {
     height: 100%;
-    width: 450px;  /*set to zero*/
+    width: 350px;  /*set to zero*/
     position: absolute;
     background-color: #586843;
     overflow-x: hidden;
@@ -54,11 +54,19 @@ form label {
     border-radius: 20px;
 }
 
-#map_title, #panel_title {
+#map_title {
     position: relative;
     top: -30px;
     font-size: 25px;
     text-align: center;
+}
+
+#panel_title {
+    position: relative;
+    top: -30px;
+    left: 20px;
+    font-size: 25px;
+    text-align: left;
 }
 
 #form {
